# headless-example

./: .gitignore  CMakeLists.txt
gsrc/: main.cpp  main.hpp  sources.cmake
src/: main.hpp
